# CIS3207-Projects

./: README.md
project-0-fall21-ayserjamshidi-main/: CMakeLists.txt
project-0-fall21-ayserjamshidi-main/part-A/: CMakeLists.txt  ex1.txt  ex2.txt  ex3.txt  wcat.cpp  wgrep.cpp
project-0-fall21-ayserjamshidi-main/part-B/: CMakeLists.txt  ex1.txt  ex2.txt  wunzip.cpp  wzip.cpp
project-1-fall21-ayserjamshidi-main/: CMakeLists.txt  README.md  config.txt  config_file.cpp  config_file.h  main.cpp
project-1-fall21-ayserjamshidi-main/model/: job.cpp  job.h  job_event.h
project-2-fall21-ayserjamshidi-main/: CMakeLists.txt  Makefile  batch.txt  main.cpp  output.txt  pseudocode.txt  readme  testplan.txt
project-2-fall21-ayserjamshidi-main/Helpers/: directory_helper.cpp  directory_helper.h  file_helper.cpp  file_helper.h  print_helper.cpp  print_helper.h  redirection.cpp  redirection.h  vector_manipulation.cpp  vector_manipulation.h
project-2-fall21-ayserjamshidi-main/InternalCommands/: cd.cpp  clr.cpp  dir.cpp  echo.cpp  environ.cpp  help.cpp  internal_commands.h  path.cpp  pause.cpp
project-2-fall21-ayserjamshidi-main/Structures/: shell.h
project-3-networked-spell-checker-ayserjamshidi-main/: CMakeLists.txt  Makefile  readme  words  writeup
project-3-networked-spell-checker-ayserjamshidi-main/src/: dictionary.cpp  server.cpp
project-3-networked-spell-checker-ayserjamshidi-main/src/Headers/: dictionary.h  errors.h  server_structures.h
project-3-networked-spell-checker-ayserjamshidi-main/src/Helpers/: generics.cpp  helpers.h  map_manipulation.cpp  open_listener_socket.h  printers.cpp
project-4-f21-ayserjamshidi-main/: CMakeLists.txt  Makefile  README  notes  signalreceive_log - 30 seconds.txt
project-4-f21-ayserjamshidi-main/src/: main.cpp
project-4-f21-ayserjamshidi-main/src/helpers/: generics.cpp
project-4-f21-ayserjamshidi-main/src/includes/: colors.h  errors.h  globals.h  helpers.h  log_entry.h  logger.h  signal_handlers.h
project-4-f21-ayserjamshidi-main/src/signalhandler/: generator.cpp  initialize.cpp  logger.cpp  receiver.cpp
